--- a/package.json
+++ b/package.json
@@ -1,65 +1,41 @@
 {
-  "name": "@ankr.com/bas-javascript-sdk",
-  "version": "0.0.153",
-  "description": "stkr js sdk to interact with stkr.io directly",
-  "keywords": [
-    "ankr",
-    "ankr.com",
-    "stkr",
-    "stkr.io",
-    "eth 2.0",
-    "staking"
+  "name": "@ankr.com/bas-javascript-monorepo",
+  "workspaces": [
+    "packages/*"
   ],
-  "module": "dist",
-  "typings": "dist/types",
-  "files": [
-    "dist"
-  ],
+  "description": "Typescript monorepo",
+  "repository": "https://github.com/stereobooster/typescript-monorepo",
   "license": "MIT",
+  "private": true,
   "scripts": {
-    "lint": "node_modules/.bin/tslint --project tsconfig.json",
-    "prebuild": "rimraf dist",
-    "build": "tsc",
-    "precommit": "lint-staged; npm run test",
-    "preversion": "npm run lint",
-    "prepublish": "tsc",
-    "publish": "yarn publish",
-    "test": "jest --coverage",
-    "test:watch": "jest --coverage --watch"
-  },
-  "lint-staged": {
-    "{src,test}/**/*.ts": [
-      "prettier --write",
-      "git add"
-    ]
-  },
-  "prettier": {
-    "semi": false,
-    "singleQuote": true
+    "prestart": "yarn build",
+    "start": "run-p start:*",
+    "start:stories": "lerna run start --stream --scope=@stereobooster/stories",
+    "start:watch": "tsc --build --watch",
+    "pretest": "yarn build",
+    "test": "jest --config=jest.json",
+    "test:stories": "lerna run test --stream --scope=@stereobooster/stories",
+    "build": "tsc --build",
+    "build:stories": "lerna run build --stream --scope=@stereobooster/stories",
+    "clean": "rimraf packages/*/{tsconfig.tsbuildinfo,lib,dist}"
   },
   "devDependencies": {
-    "@types/jest": "^27.0.2",
-    "@types/node": "^14.14.41",
-    "jest": "^27.2.5",
-    "lerna": "^3.22.1",
-    "ts-jest": "^27.0.6",
-    "ts-node": "^7.0.1",
-    "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.15.0",
-    "tslint-config-standard": "^8.0.1",
-    "typescript": "^4.4.4"
-  },
-  "dependencies": {
-    "@ethereumjs/tx": "^3.3.2",
-    "@metamask/detect-provider": "^1.2.0",
-    "@types/node": "^14.14.41",
-    "bignumber.js": "^9.0.1",
-    "ethereumjs-util": "^7.1.3",
-    "web3": "^1.7.1",
-    "web3-eth-contract": "^1.3.5"
-  },
-  "publishConfig": {
-    "access": "public"
-  },
-  "author": ""
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
+    "@types/jest": "^24.0.13",
+    "@types/react": "^16.8.18",
+    "@types/react-dom": "^16.8.4",
+    "@types/react-test-renderer": "^16.8.1",
+    "babel-jest": "^24.8.0",
+    "jest": "^24.8.0",
+    "lerna": "^3.14.1",
+    "npm-run-all": "^4.1.5",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-test-renderer": "^16.8.6",
+    "rimraf": "^2.6.3",
+    "ts-jest": "^24.0.2",
+    "typescript": "^3.4.5"
+  }
 }
