--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,50 @@
 {
-  "compilerOptions": {
-    "lib": [
-      "es2015"
-    ],
-    "moduleResolution": "node",
-    "target": "es5",
-    "module": "commonjs",
-    "sourceMap": true,
-    "declaration": true,
-    "declarationDir": "dist/types",
-    "outDir": "dist",
-    "rootDir": "src",
-    "types": [
-      "node",
-      "jest"
-    ],
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "jsx": "react"
-  },
-  "include": [
-    "src/**/*",
-    "types.d.ts"
+  "exclude": [
+    "node_modules",
+    "dist",
+    "lib",
+    "__tests__",
+    "**/*.test*",
+    "**/*.spec*"
   ],
-  "resolveJsonModule": true
+  "files": [],
+  "compilerOptions": {
+    "skipLibCheck": false,
+    "target": "esnext",
+    "module": "esnext",
+    "lib": [
+      "dom",
+      "esnext"
+    ],
+    "jsx": "react",
+    "rootDir": ".",
+    "outDir": "lib",
+    "downlevelIteration": true,
+    "strict": true,
+    "removeComments": false,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "baseUrl": ".",
+    "paths": {
+      "@stereobooster/*": [
+        "packages/*/src"
+      ]
+    },
+    // https://github.com/RyanCavanaugh/learn-a/#tsconfigsettingsjson
+    "composite": true,
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true
+  },
+  "references": [
+    {
+      "path": "packages/javascript-sdk"
+    }
+  ]
 }
