--- a/packages/javascript-sdk/package.json
+++ b/packages/javascript-sdk/package.json
@@ -5,7 +5,7 @@
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "repository": "",
-  "author": "stereobooster <stereobooster@gmail.com>",
+  "author": "Dmitry Savonin <dmitry@ankr.com>",
   "license": "MIT",
   "publishConfig": {
     "access": "public"
