--- a/package.json
+++ b/package.json
@@ -10,32 +10,28 @@
   "scripts": {
     "prestart": "yarn build",
     "start": "run-p start:*",
-    "start:stories": "lerna run start --stream --scope=@ankr.com/stories",
     "start:watch": "tsc --build --watch",
     "pretest": "yarn build",
     "test": "jest --config=jest.json",
-    "test:stories": "lerna run test --stream --scope=@ankr.com/stories",
     "build": "tsc --build",
-    "build:stories": "lerna run build --stream --scope=@ankr.com/stories",
     "clean": "rimraf packages/*/{tsconfig.tsbuildinfo,lib,dist}"
   },
   "devDependencies": {
+    "@0x/abi-gen": "^5.8.0",
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "@types/jest": "^24.0.13",
-    "@types/react": "^16.8.18",
-    "@types/react-dom": "^16.8.4",
-    "@types/react-test-renderer": "^16.8.1",
     "babel-jest": "^24.8.0",
     "jest": "^24.8.0",
     "lerna": "^3.14.1",
     "npm-run-all": "^4.1.5",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-test-renderer": "^16.8.6",
     "rimraf": "^2.6.3",
     "ts-jest": "^24.0.2",
     "typescript": "^4.6.2"
+  },
+  "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "babel": "^6.23.0"
   }
 }
