--- a/packages/javascript-sdk/tsconfig.json
+++ b/packages/javascript-sdk/tsconfig.json
@@ -5,6 +5,7 @@
   ],
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "jsx": "preserve",
     "outDir": "lib",
     "rootDir": "src",
     "baseUrl": ".",
