--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "start": "run-p start:*",
     "start:watch": "tsc --build --watch",
     "pretest": "yarn build",
-    "test": "jest --config=jest.json",
     "build": "tsc --build",
     "clean": "rimraf packages/*/{tsconfig.tsbuildinfo,lib,dist}"
   },
@@ -20,13 +19,17 @@
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
-    "@types/jest": "^24.0.13",
-    "babel-jest": "^24.8.0",
-    "jest": "^24.8.0",
+    "@types/jest": "^27.4.1",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-typescript": "^0.14.0",
+    "eslint-webpack-plugin": "^2.5.2",
     "lerna": "^3.14.1",
     "npm-run-all": "^4.1.5",
     "rimraf": "^2.6.3",
-    "ts-jest": "^24.0.2",
     "typescript": "^4.6.2"
   },
   "dependencies": {
