--- a/packages/staking-ui/package.json
+++ b/packages/staking-ui/package.json
@@ -27,7 +27,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-scripts": "4.0.1",
+    "customize-cra": "^1.0.0",
+    "babel-loader": "8.1.0"
   },
   "peerDependencies": {
     "@ankr.com/bas-javascript-sdk": "0.0.1",
@@ -39,10 +42,12 @@
     "@babel/core": "^7.17.8",
     "@babel/preset-env": "^7.16.11",
     "@types/react-dom": "^17.0.14",
-    "env-cmd": "^10.1.0"
+    "env-cmd": "^10.1.0",
+    "react-app-rewired": "^2.1.8",
+    "eslint-webpack-plugin": "^2.5.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "env-cmd -f .env.testnet react-app-rewired start",
     "start:testnet": "env-cmd -f ./.env.testnet react-scripts start",
     "start:devnet": "env-cmd -f ./.env.devnet react-scripts start",
     "build": "react-scripts build",
