--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,53 +1,23 @@
 {
-  "exclude": [
-    "node_modules",
-    "dist",
-    "lib",
-    "__tests__",
-    "**/*.test*",
-    "**/*.spec*"
-  ],
-  "files": [],
   "compilerOptions": {
-    "skipLibCheck": false,
-    "target": "esnext",
-    "module": "esnext",
-    "lib": [
-      "dom",
-      "esnext"
+    "jsx": "preserve",
+    "rootDirs": [
+      "."
     ],
-    "jsx": "react",
-    "rootDir": ".",
-    "outDir": "lib",
-    "downlevelIteration": true,
-    "strict": true,
-    "removeComments": false,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true,
+    "target": "es5",
+    "allowJs": true,
+    "skipLibCheck": true,
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "baseUrl": ".",
-    "paths": {
-      "@ankr.com/*": [
-        "packages/*/src"
-      ]
-    },
-    // https://github.com/RyanCavanaugh/learn-a/#tsconfigsettingsjson
-    "composite": true,
-    "declaration": true,
-    "declarationMap": true,
-    "sourceMap": true
-  },
-  "references": [
-    {
-      "path": "packages/javascript-sdk"
-    },
-    {
-      "path": "packages/staking-ui"
-    }
-  ]
+    "noFallthroughCasesInSwitch": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "baseUrl": "src",
+    "resolveJsonModule": true,
+    "isolatedModules": false,
+    "noEmit": true,
+    "experimentalDecorators": true
+  }
 }
