--- a/packages/staking-ui/tsconfig.json
+++ b/packages/staking-ui/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "rootDirs": [
       "."
     ],
@@ -21,14 +21,13 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": false,
+    "isolatedModules": true,
     "noEmit": true,
-    // "jsx": "react",
     "baseUrl": "src",
     "experimentalDecorators": true
   },
   "include": [
     "src",
     "typings/**/*.d.ts"
-  ],
+  ]
 }
