added buttons to the governance table

--- a/packages/staking-ui/.eslintrc
+++ b/packages/staking-ui/.eslintrc
@@ -74,6 +74,7 @@
             "functions": false
           }
         ],
+        "consistent-return": "warn",
         "no-nested-ternary": "error",
         "no-underscore-dangle": "error",
         "jsx-a11y/no-noninteractive-element-interactions": "error",
