--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,53 @@
 {
+  "exclude": [
+    "node_modules",
+    "dist",
+    "lib",
+    "__tests__",
+    "**/*.test*",
+    "**/*.spec*"
+  ],
+  "files": [],
   "compilerOptions": {
-    "jsx": "preserve",
-    "rootDirs": [
-      "."
-    ],
-    "target": "es5",
-    "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
+    "skipLibCheck": false,
+    "target": "esnext",
     "module": "esnext",
+    "lib": [
+      "dom",
+      "esnext"
+    ],
+    "jsx": "react",
+    "rootDir": ".",
+    "outDir": "lib",
+    "downlevelIteration": true,
+    "strict": true,
+    "removeComments": false,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noImplicitReturns": false,
+    "noFallthroughCasesInSwitch": false,
     "moduleResolution": "node",
-    "baseUrl": "src",
-    "resolveJsonModule": true,
-    "isolatedModules": false,
-    "noEmit": true,
-    "experimentalDecorators": true
-  }
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "baseUrl": ".",
+    "paths": {
+      "@ankr.com/*": [
+        "packages/*/src"
+      ]
+    },
+    // https://github.com/RyanCavanaugh/learn-a/#tsconfigsettingsjson
+    "composite": true,
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true
+  },
+  "references": [
+    {
+      "path": "packages/javascript-sdk"
+    },
+    {
+      "path": "packages/staking-ui"
+    },
+  ]
 }
