--- a/packages/staking-ui/package.json
+++ b/packages/staking-ui/package.json
@@ -19,18 +19,19 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^8.3.4",
     "antd": "^4.19.3",
+    "antd-prompt": "^0.6.0",
     "axios": "^0.26.1",
+    "babel-loader": "8.1.0",
     "bignumber.js": "^9.0.2",
+    "customize-cra": "^1.0.0",
     "mobx": "^6.5.0",
     "mobx-react": "^7.3.0",
     "mobx-utils": "^6.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "web-vitals": "^2.1.4",
     "react-scripts": "4.0.1",
-    "customize-cra": "^1.0.0",
-    "babel-loader": "8.1.0"
+    "web-vitals": "^2.1.4"
   },
   "peerDependencies": {
     "@ankr.com/bas-javascript-sdk": "0.0.1",
@@ -43,8 +44,8 @@
     "@babel/preset-env": "^7.16.11",
     "@types/react-dom": "^17.0.14",
     "env-cmd": "^10.1.0",
-    "react-app-rewired": "^2.1.8",
-    "eslint-webpack-plugin": "^2.5.2"
+    "eslint-webpack-plugin": "^2.5.2",
+    "react-app-rewired": "^2.1.8"
   },
   "scripts": {
     "start": "env-cmd -f .env.testnet react-app-rewired start",
