--- a/packages/staking-ui/package.json
+++ b/packages/staking-ui/package.json
@@ -27,6 +27,7 @@
     "mobx": "^6.5.0",
     "mobx-react": "^7.3.0",
     "mobx-utils": "^6.0.4",
+    "pretty-time": "^1.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
