a lot of staking ui fixes and improvements

--- a/packages/staking-ui/.eslintrc
+++ b/packages/staking-ui/.eslintrc
@@ -77,7 +77,7 @@
           }
         ],
         "@typescript-eslint/ban-ts-comment": "error",
-        "@typescript-eslint/no-non-null-assertion": "error",
+        "@typescript-eslint/no-non-null-assertion": "warn",
         "@typescript-eslint/ban-types": [
           "error",
           {
