--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,18 @@
 version: 2.1
 
 jobs:
- build:
+ build-staking-ui:
    machine: true
    steps:
      - checkout
      - run: echo "$DOCKER_PASS" | docker login --username $DOCKER_USER --password-stdin
-     - run: docker build -t ankrnetwork/bas-staking-ui:$CIRCLE_BRANCH .
+     - run: docker build -f docker/staking-ui.Dockerfile -t ankrnetwork/bas-staking-ui:$CIRCLE_BRANCH ./
      - run: docker push ankrnetwork/bas-staking-ui:$CIRCLE_BRANCH
 
 workflows:
   build-deploy:
     jobs:
-      - build:
+      - build-staking-ui:
           context:
             - docker_deploy
           filters:
