--- a/packages/staking-ui/package.json
+++ b/packages/staking-ui/package.json
@@ -49,6 +49,7 @@
     "react-app-rewired": "^2.1.8"
   },
   "scripts": {
+    "start": "react-app-rewired start",
     "start:local": "env-cmd -f .env.local react-app-rewired start",
     "start:devnet": "env-cmd -f .env.devnet react-app-rewired start",
     "build:local": "env-cmd -f .env.local react-scripts build",
