added build command

--- a/packages/staking-ui/package.json
+++ b/packages/staking-ui/package.json
@@ -52,6 +52,7 @@
     "start": "react-app-rewired start",
     "start:local": "env-cmd -f .env.local react-app-rewired start",
     "start:devnet": "env-cmd -f .env.devnet react-app-rewired start",
+    "build": "react-scripts build",
     "build:local": "env-cmd -f .env.local react-scripts build",
     "build:devnet": "env-cmd -f .env.devnet react-scripts build"
   },
