--- a/packages/staking-ui/package.json
+++ b/packages/staking-ui/package.json
@@ -53,9 +53,11 @@
     "start": "REACT_APP_ENVIRONMENT=env react-app-rewired start",
     "start:local": "REACT_APP_ENVIRONMENT=local react-app-rewired start",
     "start:devnet": "REACT_APP_ENVIRONMENT=devnet react-app-rewired start",
+    "start:jfin": "REACT_APP_ENVIRONMENT=jfin react-app-rewired start",
     "build": "REACT_APP_ENVIRONMENT=env react-scripts build",
     "build:local": "REACT_APP_ENVIRONMENT=local react-scripts build",
-    "build:devnet": "REACT_APP_ENVIRONMENT=devnet react-scripts build"
+    "build:devnet": "REACT_APP_ENVIRONMENT=devnet react-scripts build",
+    "build:jfin": "REACT_APP_ENVIRONMENT=jfin react-scripts build"
   },
   "browserslist": {
     "production": [
