--- a/packages/staking-ui/.eslintrc
+++ b/packages/staking-ui/.eslintrc
@@ -53,6 +53,7 @@
             "functions": false
           }
         ],
+        "@typescript-eslint/no-var-requires": "warn",
         "consistent-return": "warn",
         "no-nested-ternary": "error",
         "no-underscore-dangle": "error",
