--- a/packages/staking-ui/package.json
+++ b/packages/staking-ui/package.json
@@ -29,6 +29,7 @@
     "mobx-utils": "^6.0.4",
     "pretty-time": "^1.1.0",
     "react": "^17.0.2",
+    "react-cookie-consent": "^7.5.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.1",
