added webpack plugins

--- a/packages/config-ui/package.json
+++ b/packages/config-ui/package.json
@@ -45,6 +45,7 @@
     "@types/react-dom": "^17.0.14",
     "env-cmd": "^10.1.0",
     "eslint-webpack-plugin": "^2.5.2",
+    "html-webpack-plugin": "^5.5.0",
     "react-app-rewired": "^2.1.8",
     "serve": "^13.0.2"
   },
