--- a/packages/config-ui/tsconfig.json
+++ b/packages/config-ui/tsconfig.json
@@ -28,12 +28,5 @@
     "noEmit": true,
     "experimentalDecorators": true
   },
-  "references": [
-    {
-      "path": "../javascript-sdk"
-    },
-    {
-      "path": "../relayhub-sdk"
-    }
-  ]
+  "references": []
 }
