--- a/packages/staking-ui/.eslintrc
+++ b/packages/staking-ui/.eslintrc
@@ -72,9 +72,9 @@
         ],
         "@typescript-eslint/no-explicit-any": "warn",
         "@typescript-eslint/explicit-module-boundary-types": "error",
-        "@typescript-eslint/lines-between-class-members": "no",
+        "@typescript-eslint/lines-between-class-members": "off",
         "@typescript-eslint/no-inferrable-types": [
-          "no",
+          "off",
           {
             "ignoreParameters": false,
             "ignoreProperties": false
