--- a/packages/staking-ui/package.json
+++ b/packages/staking-ui/package.json
@@ -49,6 +49,7 @@
     "@types/react-dom": "^17.0.14",
     "env-cmd": "^10.1.0",
     "eslint-webpack-plugin": "^2.5.2",
+    "html-webpack-inline-source-plugin": "^0.0.10",
     "react-app-rewired": "^2.1.8",
     "serve": "^13.0.2"
   },
