--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,11 +8,24 @@ jobs:
      - run: echo "$DOCKER_PASS" | docker login --username $DOCKER_USER --password-stdin
      - run: docker build -f docker/staking-ui.Dockerfile -t ankrnetwork/bas-staking-ui:$CIRCLE_BRANCH ./
      - run: docker push ankrnetwork/bas-staking-ui:$CIRCLE_BRANCH
+ build-config-ui:
+   machine: true
+   steps:
+     - checkout
+     - run: echo "$DOCKER_PASS" | docker login --username $DOCKER_USER --password-stdin
+     - run: docker build -f docker/config-ui.Dockerfile -t ankrnetwork/bas-config-ui:$CIRCLE_BRANCH ./
+     - run: docker push ankrnetwork/bas-config-ui:$CIRCLE_BRANCH
 
 workflows:
   build-deploy:
     jobs:
       - build-staking-ui:
+          context:
+            - docker_deploy
+          filters:
+            branches:
+              only: [ devel ]
+      - build-config-ui:
           context:
             - docker_deploy
           filters:
