--- a/packages/config-ui/package.json
+++ b/packages/config-ui/package.json
@@ -24,6 +24,7 @@
     "babel-loader": "8.1.0",
     "bignumber.js": "^9.0.2",
     "customize-cra": "^1.0.0",
+    "file-saver": "^2.0.5",
     "merkle-patricia-tree": "^4.2.4",
     "mobx": "^6.5.0",
     "mobx-react": "^7.3.0",
@@ -42,6 +43,7 @@
   "devDependencies": {
     "@babel/core": "^7.17.8",
     "@babel/preset-env": "^7.16.11",
+    "@types/file-saver": "^2.0.5",
     "@types/react-dom": "^17.0.14",
     "env-cmd": "^10.1.0",
     "eslint-webpack-plugin": "^2.5.2",
